<resources>
    <string name="app_name">UserInterface</string>
    <string name="str_description">Hijo, si de verdad quieres algo en esta vida,
        vas a tener que trabajar por ello. Ahora cállate, van a dar los números de la lotería. – Homer Simpson</string>
    <string name="str_hideDescription">Show description</string>
    <string name="str_name">Name</string>
    <string name="str_firstSurname">1st Surname</string>
    <string name="str_secondSurname">2nd Surname</string>
    <string name="str_postalCode">PC</string>
    <string name="str_city">City</string>
    <string name="str_hide">Show data</string>
    <string name="edit_description">Edit Description</string>
    <string name="ok">Ok</string>

</resources>
