<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserInterface">

    <View
            android:background="@drawable/image_wallpaper"
            android:layout_width="403dp"
            android:layout_height="203dp"
            android:id="@+id/view_top" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.485"/>
    <ImageView
            android:layout_width="146dp"
            android:layout_height="144dp" app:srcCompat="@drawable/image_profile"
            android:background="@drawable/image_profile_shape"
            android:id="@+id/imageView_profile" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/view_top" app:layout_constraintStart_toStartOf="@+id/view_top"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/view_top"
            android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/view_top"
            android:layout_marginBottom="8dp"/>

    <ScrollView
        android:id="@+id/scrollView_content"
        android:layout_width="392dp"
        android:layout_height="356dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="355dp"
                android:layout_height="68dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:text="@string/str_description"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.619"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/switch_hide"
                android:layout_width="123dp"
                android:layout_height="58dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/str_hideDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.904"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_description" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_name"
                android:layout_width="189dp"
                android:layout_height="59dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_hide"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_description"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_name"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="3dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_firstSurname"
                android:layout_width="161dp"
                android:layout_height="62dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/editText_firstSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_firstSurname"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="3dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:visibility="gone"

                android:id="@+id/textInputLayout_postalCode"
                android:layout_width="161dp"
                android:layout_height="62dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_firstSurname">

                <EditText
                    android:id="@+id/editText_postalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_postalCode"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="3dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
android:visibility="gone"
                android:id="@+id/textInputLayout_city"
                android:layout_width="161dp"
                android:layout_height="57dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_postalCode"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/editText_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_city"
                    android:inputType="text"
                    tools:layout_editor_absoluteX="3dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
android:visibility="gone"
                android:id="@+id/btn_show"
                android:layout_width="217dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:onClick="showPopUp"
                android:text="@string/str_hide"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_city" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_secondSurname"
                android:layout_width="161dp"
                android:layout_height="68dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.636"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout_firstSurname"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name">

                <EditText
                    android:id="@+id/editText_secondSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/str_secondSurname"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="3dp" />
            </android.support.design.widget.TextInputLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
